# GameDB

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  cmake_install.cmake  main.cpp
libs/: filelisttab.h  gamecarddelegate.h  gamedata.h  gamedetailwidget.h  gameinfodialog.h  gamelibrarymodel.h  gamelisttab.h  gamemanager.h  gamescanner.h  imageprovider.h  mainwindow.h  multiselectcombobox.h  tagmanager.h  tagmanagerdialog.h  thumbnailmanager.h
src/: filelisttab.cpp  gamecarddelegate.cpp  gamedetailwidget.cpp  gameinfodialog.cpp  gamelibrarymodel.cpp  gamelisttab.cpp  gamemanager.cpp  gamescanner.cpp  imageprovider.cpp  mainwindow.cpp  multiselectcombobox.cpp  tagmanager.cpp  tagmanagerdialog.cpp  thumbnailmanager.cpp
